--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </li>
           </template>
           <template class="more-button-template">
-            <li><button class="button more-button">Показать еще</button></li>
+            <li class="more__button-container"><button class="button more-button">Показать еще</button></li>
           </template>
       
           <template class="error-template">
